welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:32: error: not found: value T
  	T(i)=getCouleurSol()
        ^